# dailies

pdf_reader/hybrid-rag-system/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
pdf_reader/hybrid-rag-system/agent/: Dockerfile
pdf_reader/hybrid-rag-system/agent/agent/: __init__.py  agent.py  api.py  config.py  database.py  embeddings.py  models.py  prompts.py  providers.py  tools.py
pdf_reader/hybrid-rag-system/agent/ingestion/: __init__.py  chunker.py  pdf_processor.py  pipeline.py
pdf_reader/hybrid-rag-system/backend/: Dockerfile  package.json
pdf_reader/hybrid-rag-system/backend/src/: index.js  worker.js
pdf_reader/hybrid-rag-system/backend/src/config/: index.js
pdf_reader/hybrid-rag-system/backend/src/middleware/: index.js
pdf_reader/hybrid-rag-system/backend/src/routes/: agent.js  chat.js  queue.js  upload.js
pdf_reader/hybrid-rag-system/backend/src/services/: queue.js
pdf_reader/hybrid-rag-system/backend/src/utils/: logger.js
pdf_reader/hybrid-rag-system/docs/: DEPLOYMENT.md
pdf_reader/hybrid-rag-system/frontend/: Dockerfile  next.config.js  package.json  tailwind.config.js
pdf_reader/hybrid-rag-system/frontend/app/: globals.css  layout.tsx  page.tsx
pdf_reader/hybrid-rag-system/frontend/components/: chat-interface.tsx  file-upload.tsx
pdf_reader/hybrid-rag-system/frontend/hooks/: use-toast.ts
pdf_reader/hybrid-rag-system/frontend/lib/: utils.ts
pdf_reader/hybrid-rag-system/frontend/store/: chat-store.ts
price_pred/: .gitignore  README.md  enhanced_stock_prediction_clean.ipynb  requirements.txt  stock_optimized_low_spec.ipynb
